@@ -51,12 +51,13 @@ type
     FFirebirdAPI: IFirebirdAPI;
     FProtocol: TProtocol;
     FServerName: AnsiString;
+    FPort: integer;
     procedure CheckServerName;
   protected
     FSPB: ISPB;
     procedure InternalAttach(ConnectString: AnsiString); virtual; abstract;
   public
-    constructor Create(ServerName: AnsiString; Protocol: TProtocol; SPB: ISPB);
+    constructor Create(ServerName: AnsiString; Protocol: TProtocol; SPB: ISPB; Port: integer = 0);
     destructor Destroy; override;
   public
     {IServiceManager}
@@ -82,14 +83,15 @@ begin
     IBError(ibxeServerNameMissing, [nil]);
 end;
 
-constructor TFBServiceManager.Create(ServerName: AnsiString; Protocol: TProtocol;
-  SPB: ISPB);
+constructor TFBServiceManager.Create(ServerName: AnsiString;
+  Protocol: TProtocol; SPB: ISPB; Port: integer);
 begin
   inherited Create;
   FFirebirdAPI := FirebirdAPI; {Keep reference to interface}
   FProtocol := Protocol;
   FSPB := SPB;
   FServerName := ServerName;
+  FPort := Port;
   Attach;
 end;
 
@@ -111,12 +113,30 @@ end;
 
 procedure TFBServiceManager.Attach;
 var ConnectString: AnsiString;
+    ServerName: string;
 begin
+  ServerName := FServerName;
+  if FPort <> 0 then
+    case FProtocol of
+    NamedPipe:
+      ServerName += '@' + IntToStr(FPort);
+    Local,
+    SPX,
+    xnet: {do nothing};
+    TCP:
+      ServerName += '/' + IntToStr(FPort);
+    else
+      ServerName += ':' + IntToStr(FPort);
+    end;
+
   case FProtocol of
-    TCP: ConnectString := FServerName + ':service_mgr'; {do not localize}
-    SPX: ConnectString := FServerName + '@service_mgr'; {do not localize}
-    NamedPipe: ConnectString := '\\' + FServerName + '\service_mgr'; {do not localize}
-    Local: ConnectString := 'service_mgr'; {do not localize}
+    TCP:        ConnectString := ServerName + ':service_mgr'; {do not localize}
+    SPX:        ConnectString := ServerName + '@service_mgr'; {do not localize}
+    NamedPipe:  ConnectString := '\\' + ServerName + '\service_mgr'; {do not localize}
+    Local:      ConnectString := 'service_mgr'; {do not localize}
+    inet:       ConnectString := 'inet://' + ServerName + '/service_mgr';
+    wnet:       ConnectString := 'wnet://' + ServerName + '/service_mgr';
+    xnet:       ConnectString := 'xnet://' + ServerName + '/service_mgr';
   end;
   InternalAttach(ConnectString);
 end;
